Starting new project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,60 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- ======= Mobile nav toggle button ======= -->
+<button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
+
+<!-- ======= Header ======= -->
+<header id="header">
+  <div class="d-flex flex-column">
+
+    <div class="profile">
+      <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <h1 class="text-light"><a routerLink="/orders">Restaurant</a></h1>
+      <div class="social-links mt-3 text-center">
+        <a href="https://www.facebook.com/eslam.khder.98"  target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/eslam_khder" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.cn/in/eslam-khder-4145351b0" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+    </div>
+
+    <nav class="nav-menu">
+      <app-category-items *ngIf="isLogin()"></app-category-items>
+    </nav><!-- .nav-menu -->
+    <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
+
+  </div>
+</header><!-- End Header -->
+
+<!-- Start Navbar -->
+<nav class="mynav navbar navbar-expand-lg navbar navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" routerLink="/orders">Restaurant</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
+
+        <app-dropdown-menu *ngIf="isLogin()"></app-dropdown-menu>
+
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <app-search-order></app-search-order>
     </div>
+
+    <app-card-status></app-card-status>
   </div>
 </nav>
-<i class="fa-solid fa-cart-plus"></i>
+<!-- Start Order -->
+<nav class="maindiv">
+  <div class="container">
+
+    <router-outlet></router-outlet>
+
+  </div>
+</nav>
+<!-- ======= Footer ======= -->
+<footer id="footer">
+  <div class="container">
+    <div class="credits">
+      Designed by <a href="https://www.facebook.com/eslam.khder.98" target="_blank">Eslam Khder</a>
+    </div>
+  </div>
+</footer><!-- End  Footer -->
