--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
     <div class="profile">
       <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-      <h1 class="text-light"><a routerLink="/orders">Restaurant</a></h1>
+      <h1 class="text-light"><a href="index.html">Restaurant</a></h1>
       <div class="social-links mt-3 text-center">
         <a href="https://www.facebook.com/eslam.khder.98"  target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/eslam_khder" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -16,7 +16,15 @@
     </div>
 
     <nav class="nav-menu">
-      <app-category-items *ngIf="isLogin()"></app-category-items>
+      <ul>
+        <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="#about"><i class="fas fa-utensils"></i> <span>Foods</span></a></li>
+        <li><a href="#resume"><i class="fas fa-cocktail"></i> <span>Cold Drinks</span></a></li>
+        <li><a href="#portfolio"><i class="fas fa-coffee"></i> Hot Drinks</a></li>
+        <li><a href="#services"><i class="fas fa-cookie-bite"></i> Sweets</a></li>
+        <li><a href="#contact"><i class="fas fa-meat"></i>Other Food</a></li>
+
+      </ul>
     </nav><!-- .nav-menu -->
     <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
@@ -26,28 +34,224 @@
 <!-- Start Navbar -->
 <nav class="mynav navbar navbar-expand-lg navbar navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/orders">Restaurant</a>
+    <a class="navbar-brand" href="#">Restaurant</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-        <app-dropdown-menu *ngIf="isLogin()"></app-dropdown-menu>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Categories
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
 
       </ul>
-      <app-search-order></app-search-order>
+      <form class="d-flex myform">
+        <input class="mygro form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="mygro btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
 
-    <app-card-status></app-card-status>
+    <div class="statusCard">
+      <span class="span">$50000<i class="fas fa-coins"></i> | 200</span>
+      <i class="fas fa-cart-arrow-down"></i>
+    </div>
   </div>
 </nav>
 <!-- Start Order -->
 <nav class="maindiv">
   <div class="container">
-
-    <router-outlet></router-outlet>
-
+    <div class="row">
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+      <div class="col-md-4 myorder">
+        <div class="card">
+          <img src="assets/img/logo-cook.jpg" alt="Denim Jeans" style="width:100%">
+          <h1>Tailored Jeans</h1>
+          <p class="price">$19.99</p>
+          <p class="dis">Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+          <button class="btn btn-primary">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
 </nav>
 <!-- ======= Footer ======= -->
@@ -58,3 +262,5 @@
     </div>
   </div>
 </footer><!-- End  Footer -->
+
+<a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
